# agentsecrets

./: .gitignore  AGENT.md  README.md  go.mod  go.sum  makefile  spec_agent_identity_api.md:Zone.Identifier
.agent/workflows/: agentsecrets.md
cmd/agentsecrets/commands/: agent.go  allowlist.go  call.go  docs.go  env.go  environment.go  exec.go  init.go  log.go  login.go  logout.go  mcp.go  project.go  proxy.go  root.go  secrets.go  status.go  workspace.go
docs/: ARCHITECTURE.md  CONTRIBUTING.md  PROXY.md  QUICKSTART.md
docs/commands/: agent.md  environment.md  log.md  project.md  proxy.md  workspace.md
integrations/openclaw/: README.md  SKILL.md
npm/: README.md  index.js  package.json
pkg/agents/: service.go
pkg/api/: client.go  client_test.go
pkg/auth/: auth.go  auth_test.go  middleware.go
pkg/config/: config.go  config_test.go  update.go  update_test.go
pkg/crypto/: crypto.go  crypto_test.go
pkg/keychainauth/: client.go  dial_linux.go  dial_other.go  dial_unix.go  dial_windows.go  errors.go  errors_test.go  protocol.go  setup.go  socket.go  sysprocattr_unix.go  sysprocattr_windows.go
pkg/keyring/: keyring.go
pkg/log/: service.go
pkg/mcp/: server.go  server_test.go
pkg/projects/: projects.go  projects_test.go
pkg/proxy/: audit.go  engine.go  engine_test.go  forwarder.go  injector.go  injector_test.go  server.go
pkg/secrets/: dotenv.go  secrets.go
pkg/telemetry/: telemetry.go
pkg/ui/: spinner.go  ui.go
pkg/workspaces/: workspaces.go  workspaces_test.go
pypi/: README.md  pyproject.toml
pypi/src/agentsecrets/: binary.py
