[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentsecrets-cli"
version = "1.3.1"
description = "AI-native zero-knowledge secrets manager"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [
    { name = "The Seventeen", email = "engineering@theseventeen.co" },
]
keywords = [
    "ai",
    "agents",
    "secrets",
    "security",
    "credentials",
    "cli",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
]
dependencies = []

[project.scripts]
agentsecrets = "agentsecrets.main:main"

[tool.hatch.build.targets.wheel]
packages = ["src/agentsecrets"]
